--- a/frontend/Blogs.css
+++ b/frontend/Blogs.css
@@ -165,6 +165,12 @@ main {
     margin-bottom: 1rem;
 }
 
+.BlogCard img:last-of-type {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
 .BlogCard button {
     margin: 0.5rem 1.2rem 1.2rem;
     padding: 0.7rem 1.2rem;
